@@ -14,17 +14,17 @@ import os                                      # don't remove
 
 # ALLOW_MODE_640 = 0
 
-# BLACKLIST = os.path.expanduser("~/.tmda-blacklist")
+# BLACKLIST = "/full/path/to/blacklist.txt"
 
 # BOUNCE_BLACKLIST_CC = "jdoe-bounces-blacklist@domain.dom"
 
 # BOUNCE_DATED_CC = "jdoe-bounces-dated@domain.dom"
 
-# BOUNCE_DATED_TEMPLATE = os.path.expanduser("~/.tmda_bounce_dated.txt")
+# BOUNCE_DATED_TEMPLATE = "/full/path/to/bounce_dated.txt"
 
 # BOUNCE_SENDER_CC = "jdoe-bounces-sender@domain.dom"
 
-# BOUNCE_SENDER_TEMPLATE = os.path.expanduser("~/.tmda_bounce_sender.txt")
+# BOUNCE_SENDER_TEMPLATE = "/full/path/to/bounce_sender.txt"
 
 # BOUNCE_ENV_SENDER = ""
 
@@ -32,7 +32,7 @@ import os                                      # don't remove
 
 # CONFIRM_ACCEPT_NOTIFY = 1
 
-# CONFIRM_ACCEPT_TEMPLATE = os.path.expanduser("~/.tmda_confirm_accept.txt")
+# CONFIRM_ACCEPT_TEMPLATE = "/full/path/to/confirm_accept.txt"
 
 # COOKIE_TYPE = "dated"
 
@@ -66,17 +66,17 @@ import os                                      # don't remove
 
 # USERNAME = "jdoe" 
 
-# BARE_FILE = os.path.expanduser("~/.tmda-bare")
+# BARE_FILE = "/full/path/to/bare.txt"
 
-# DATED_FILE = os.path.expanduser("~/.tmda-dated")
+# DATED_FILE = "/full/path/to/dated.txt"
 
-# EXP_FILE = os.path.expanduser("~/.tmda-exp")
+# EXP_FILE = "/full/path/to/exp.txt"
 
-# EXT_FILE = os.path.expanduser("~/.tmda-ext")
+# EXT_FILE = "/full/path/to/ext.txt"
 
-# SENDER_FILE = os.path.expanduser("~/.tmda-sender")
+# SENDER_FILE = "/full/path/to/sender.txt"
 
-# WHITELIST = os.path.expanduser("~/.tmda-whitelist")
+# WHITELIST = "/full/path/to/whitelist.txt"
 
 # WHITELIST_TO_BARE = 0
 
