@@ -1,3 +1,8 @@
+2001-07-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py: Change default location of dot-tmda files to lie
+	within DATADIR.  (e.g, ~/.tmda-bare == ~/.tmda/bare.txt)
+
 2001-07-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Defaults.py (CONFIRM_ACCEPT_TEMPLATE): New template for
